# data/request/socialMedias.go
@@ -1,6 +1,6 @@
 package request
 
-type PostSocialMediaReq struct {
+type SocialMediaReq struct {
 	Name           string `json:"name" validate:"required"`
 	SocialMediaUrl string `json:"social_media_url" validate:"required"`
 }
