# data/response/comments.go
@@ -30,7 +30,7 @@ type GetComments struct {
 type PostComment struct {
 	Id        uint      `json:"id"`
 	Message   string    `json:"message"`
-	PhotoId   uint      `json:"photo_url"`
+	PhotoId   uint      `json:"photo_id"`
 	UserId    uint      `json:"user_id"`
 	CreatedAt time.Time `json:"created_at"`
 }
@@ -38,7 +38,7 @@ type PostComment struct {
 type UpdateComment struct {
 	Id        uint      `json:"id"`
 	Message   string    `json:"message"`
-	PhotoId   uint      `json:"photo_url"`
+	PhotoId   uint      `json:"photo_id"`
 	UserId    uint      `json:"user_id"`
 	UpdatedAt time.Time `json:"updated_at"`
 }
