# models/socialMedia.go
@@ -1,6 +1,8 @@
 package models
 
 import (
+	"errors"
+
 	"github.com/Rahmatuldani/digitalent-project/data/request"
 	"gorm.io/gorm"
 )
@@ -15,7 +17,9 @@ type SocialMedia struct {
 
 type SocialMediaInterface interface {
 	Get() ([]SocialMedia, error)
-	Post(uint, request.PostSocialMediaReq) (SocialMedia, error)
+	Post(uint, request.SocialMediaReq) (SocialMedia, error)
+	Update(uint, uint, request.SocialMediaReq) (SocialMedia, error)
+	Delete(uint, uint) error
 }
 
 type SocialMediaStruct struct {
@@ -35,7 +39,7 @@ func (s *SocialMediaStruct) Get() ([]SocialMedia, error) {
 	return sosmed, nil
 }
 
-func (s *SocialMediaStruct) Post(userId uint, data request.PostSocialMediaReq) (SocialMedia, error) {
+func (s *SocialMediaStruct) Post(userId uint, data request.SocialMediaReq) (SocialMedia, error) {
 	socialMedia := SocialMedia{
 		Name: data.Name,
 		Url: data.SocialMediaUrl,
@@ -45,4 +49,32 @@ func (s *SocialMediaStruct) Post(userId uint, data request.PostSocialMediaReq) (
 		return SocialMedia{}, err
 	}
 	return socialMedia, nil
+}
+
+func (s *SocialMediaStruct) Update(userId, id uint, data request.SocialMediaReq) (SocialMedia, error) {
+	var socialMedia SocialMedia
+	if err := s.Db.First(&socialMedia, id).Error; err != nil {
+		return SocialMedia{}, err
+	}
+	if socialMedia.UserId != userId {
+		return SocialMedia{}, errors.New("can't update social media that aren't yours")
+	}
+	socialMedia.Name = data.Name
+	socialMedia.Url = data.SocialMediaUrl
+	s.Db.Save(&socialMedia)
+	return socialMedia, nil
+}
+
+func (s *SocialMediaStruct) Delete(userId, id uint) error {
+	var socialMedia SocialMedia
+	if err := s.Db.First(&socialMedia, id).Error; err != nil {
+		return err
+	}
+	if socialMedia.UserId != userId {
+		return errors.New("can't delete social media that aren't yours")
+	}
+	if err := s.Db.Unscoped().Delete(&socialMedia).Error; err != nil {
+		return err
+	}
+	return nil
 }
